create meta tag and add google site verification

--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Slyther - Snake that eats apple</title>
+		<title>Slyther - Modern Snake Game | Play Online Free</title>
+		<meta name="title" content="Slyther - Modern Snake Game | Play Online Free" />
+		<meta name="description" content="Play the modern Snake game online! Built with React and Firebase featuring real-time leaderboard, mobile controls, and smooth gameplay. Challenge players worldwide!" />
+		<meta name="keywords" content="snake game, online game, classic game, react game, javascript game, mobile game, leaderboard, free game, browser game, retro game" />
+		<meta name="author" content="Your Name" />
+		<meta name="robots" content="index, follow" />
+		<meta name="language" content="English" />
+		<meta name="revisit-after" content="7 days" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://slyther.vercel.app/" />
+		<meta property="og:title" content="Slyther - Modern Snake Game | Play Online Free" />
+		<meta property="og:description" content="Modern Snake game with Firebase leaderboard! Responsive design, smooth gameplay, and global high scores. Play the classic game reimagined for today!" />
+		<meta property="og:image" content="https://slyther.vercel.app/screenshoot.png" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
+		<meta property="og:image:alt" content="Slyther Snake Game - Modern gameplay with leaderboard" />
+		<meta property="og:site_name" content="Slyther Snake Game" />
+		<meta property="og:locale" content="en_US" />
+		<meta name="google-site-verification" content="n-iTrCQ234C0-mU73JaWzCn_hkM91XYAO93ELiZTfiQ" />
 	</head>
 	<body>
 		<div id="root"></div>
